syntax = "proto3";

// Define the service: This will be a crop health monitoring service based on live satellite images

service SatelliteCropHealthMonitoringService {
    // Unary RPC to analyze live satellite images and provide general crop health informations to farmer (client)
    rpc AnalyzeCropHealth (CropHealthRequest) returns (CropHealthResponse);

    // simple unary RPC for monitoring sunlight exposure
  rpc MonitorSunlightExposure (SunlightExposureRequest) returns (SunlightExposureResponse);

  // unary RPC for monitoring bug infestation
  rpc MonitorBugInfestation (BugInfestationRequest) returns (BugInfestationResponse);
  }
  
  // Request for crop health analysis

  message CropHealthRequest {
    // Parameters for the request (i.e.: location, crop type, other criteria...)
    string location = 1;
    string crop_type = 2;
    // We could add here more parameters if needed so the app can recognise health results based on those parameters
    }
  
  // Response message for crop health analysis
  
  message CropHealthResponse {
    // Information about general crop health based on live satellite images
    double health_percentage = 1;
    string health_details = 2;
    }

  // Request message for monitoring sunlight exposure
  
  message SunlightExposureRequest {
    // Parameters for the request (i.e.: location, orientation (south, east, etc))
    string location = 1;
    string orientation = 2;
    }

// Response message for monitoring sunlight exposure
    
    message SunlightExposureResponse { 
        // Details on sunlight exposure
        double sunlight_exposure = 1;
        }
    
// Request message for monitoring bug infestation

    message BugInfestationRequest {
        string location = 1;
        string crop_type = 2;
        }

// Response message for monitoring bug infestation

    message BugInfestationResponse {
        // indicates if bug infestation is present in the crop, we will use boolean for a true or false response
        bool has_bug_infestation = 1;
        string bug_infestation_details = 2;
        }